# efficiency-tools

./: .gitignore  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: config.rs  countdown.rs  lib.rs  main.rs
src-tauri/src/pomodoro/: countdown.rs  mod.rs  time.rs
src-tauri/src/utils/: mod.rs  time_util.rs
src/components/: SettingsButton.tsx
src/view/: Timer.tsx
